--- a/www/index.html
+++ b/www/index.html
@@ -88,7 +88,7 @@
                                 </div>
                             </div>
                             <div class="content-block copyright">
-                                <p>ТОО &laquo;Apple City LLC&raquo;<br />v.0.0.1 09-03-2017</p>
+                                <p>ACD News<br />v.0.0.1 09-03-2017</p>
                             </div>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
             <div class="view">
                 <div class="page">
                     <div class="page-content login-screen-content">
-                        <div class="login-screen-title"><h2>Intra</h2></div>
+                        <div class="login-screen-title"><h2>ACD NEWS</h2></div>
                         <div class="content-block">
                             <form>
                                 <div class="list-block">
