--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -61,7 +61,7 @@
                     <!-- Navbar inner for Index page-->
                     <div data-page="index" class="navbar-inner">
                         <!-- We have home navbar without left link-->
-                        <div class="center sliding">Intra</div>
+                        <div class="center sliding">Главная</div>
                         <div class="right">
                             <!-- Right link contains only icon - additional "icon-only" class-->
                             <a href="#" class="link icon-only open-panel"> <i class="icon icon-bars"></i></a>
@@ -88,7 +88,7 @@
                                 </div>
                             </div>
                             <div class="content-block copyright">
-                                <p>ТОО &laquo;Apple City LLC&raquo;<br />v.0.0.1 09-03-2017</p>
+                                <p>ACD News<br />v.0.0.1 09-03-2017</p>
                             </div>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
             <div class="view">
                 <div class="page">
                     <div class="page-content login-screen-content">
-                        <div class="login-screen-title"><h2>Intra</h2></div>
+                        <div class="login-screen-title"><h2>ACD NEWS</h2></div>
                         <div class="content-block">
                             <form>
                                 <div class="list-block">
