--- a/www/category.html
+++ b/www/category.html
@@ -1,7 +1,7 @@
 <!-- Navbar inner for Category page-->
 <div data-page="category" class="navbar-inner">
     <div class="left sliding">
-        <a href="#" class="back link"> <i class="icon icon-back"></i><span>Back</span></a>
+        <a href="#" class="back link"> <i class="icon icon-back"></i><span>Назад</span></a>
     </div>
     <div class="center sliding">Category</div>
     <div class="right">
