--- a/www/index.html
+++ b/www/index.html
@@ -55,7 +55,7 @@
                                     <a href="#" class="link icon-only open-panel"> <i class="icon icon-bars"></i></a>
                                 </div>
                                 <!-- We have home navbar without left link-->
-                                <div class="center">Intra</div>
+                                <div class="center">Главная</div>
                             </div>
                         </div>
                         <!-- Scrollable page content-->
