--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -87,7 +87,7 @@
             <div class="view">
                 <div class="page">
                     <div class="page-content login-screen-content">
-                        <div class="login-screen-title"><h2>Intra</h2></div>
+                        <div class="login-screen-title"><h2>ACD NEWS</h2></div>
                         <div class="content-block">
                             <form>
                                 <div class="list-block">
