изменил название настройки на дополнительно, блок дополнительно включил в процедуру renderCategories

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -33,9 +33,10 @@
                             <div class="categories">
                                <!-- Рендерить список разделов и категорий здесь --> 
                             </div>
-                            <div class="content-block-title">
-                                Настройки
+                        <!--     <div class="content-block-title">
+                                Дополнительно
                             </div>
+                            
                             <div class="list-block">
                                 <ul>
                                     <li>
@@ -46,7 +47,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
